[package]
name = "sub-fixer"
version = "0.1.0"
edition = "2021"
authors = ["Hamid R. K. Pishghadam <kaveh@riseup.net>"]
description = "Fix Persian subtitles"
license = "MIT OR Apache-2.0"

[[bin]]
name = "sub-fixer"
path = "src/main.rs"

[dependencies]
regex = "1.6"
lazy_static = "1.4"
clap = { version = "3.2", features = ["derive"] }
